<resources>
    <string name="app_name">HappyPlacesApp</string>
    <string name="edit_text_hint_title">Title</string>

    <string name="edit_text_hint_description">Description</string>

    <string name="edit_text_hint_date">Date</string>

    <string name="edit_text_hint_location">Location</string>

    <string name="text_add_image">ADD IMAGE</string>

    <string name="btn_text_save">SAVE</string>
    <string name="no_happy_places_found_yet">No Happy Places Found Yet. Kindly Add One.</string>

    <string name="image_content_description">image</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_api_key">AIzaSyDLnsnlUxq2tguYr2bGSAW8o-IwaeeAlsc</string>

    <string name="add_place_select_current_location_text">SELECT CURRENT LOCATION</string>

</resources>
