<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    tools:context=".activities.AddHappyPlaceActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/CustomToolbarStyle"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar_add_place"/>


    <ScrollView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/sv_main"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_place"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">


    -<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="@dimen/main_content_padding">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/til_title"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/et_title"
        android:textSize="@dimen/edit_text_text_size"
        android:textColorHint="@color/secondary_text_color"
        android:textColor="@color/primary_text_color"
        android:inputType="textCapWords"
        android:hint="@string/edit_text_hint_title"/>

</com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout android:layout_height="wrap_content" android:layout_width="match_parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/til_description" app:layout_constraintTop_toBottomOf="@+id/til_title" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_marginTop="@dimen/add_screen_til_marginTop">

    <androidx.appcompat.widget.AppCompatEditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/et_description" android:textSize="@dimen/edit_text_text_size" android:textColorHint="@color/secondary_text_color" android:textColor="@color/primary_text_color" android:inputType="textCapSentences" android:hint="@string/edit_text_hint_description"/>

</com.google.android.material.textfield.TextInputLayout>


    -<com.google.android.material.textfield.TextInputLayout android:layout_height="wrap_content" android:layout_width="match_parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/til_date" app:layout_constraintTop_toBottomOf="@+id/til_description" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_marginTop="@dimen/add_screen_til_marginTop">

    <androidx.appcompat.widget.AppCompatEditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/et_date" android:textSize="@dimen/edit_text_text_size" android:textColorHint="@color/secondary_text_color" android:textColor="@color/primary_text_color" android:inputType="text" android:hint="@string/edit_text_hint_date" android:focusableInTouchMode="false" android:focusable="false"/>

</com.google.android.material.textfield.TextInputLayout>


    -<com.google.android.material.textfield.TextInputLayout android:layout_height="wrap_content" android:layout_width="match_parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/til_location" app:layout_constraintTop_toBottomOf="@+id/til_date" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" android:layout_marginTop="@dimen/add_screen_til_marginTop">

    <androidx.appcompat.widget.AppCompatEditText android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/et_location" android:textSize="@dimen/edit_text_text_size" android:textColorHint="@color/secondary_text_color" android:textColor="@color/primary_text_color" android:inputType="text" android:hint="@string/edit_text_hint_location" android:focusableInTouchMode="false" android:focusable="false"/>

</com.google.android.material.textfield.TextInputLayout>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/shape_image_view_border" android:id="@+id/tv_select_current_location" app:layout_constraintTop_toBottomOf="@+id/til_location" android:padding="@dimen/add_place_select_current_location_padding" android:textSize="@dimen/add_place_select_current_location_textsize" android:textColor="@color/colorAccent" android:layout_marginTop="@dimen/add_place_select_current_location_marginTop" android:text="@string/add_place_select_current_location_text" android:gravity="center" android:foreground="?attr/selectableItemBackground"/>

    <androidx.appcompat.widget.AppCompatImageView android:layout_height="@dimen/add_screen_place_image_size" android:layout_width="@dimen/add_screen_place_image_size" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/shape_image_view_border" android:id="@+id/iv_place_image" app:layout_constraintTop_toBottomOf="@+id/tv_select_current_location" android:padding="@dimen/add_screen_place_image_padding" android:layout_marginTop="@dimen/add_screen_place_image_marginTop" app:layout_constraintHorizontal_bias="0.0" android:src="@drawable/add_screen_image_placeholder" android:scaleType="centerCrop"/>

    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" app:layout_constraintEnd_toEndOf="parent" android:background="?attr/selectableItemBackground" android:id="@+id/tv_add_image" app:layout_constraintTop_toBottomOf="@+id/tv_select_current_location" android:padding="@dimen/add_screen_text_add_image_padding" android:textSize="@dimen/add_screen_text_add_image_textSize" android:textColor="@color/colorAccent" android:layout_marginTop="@dimen/add_screen_text_add_image_marginTop" android:text="@string/text_add_image" android:gravity="center" app:layout_constraintHorizontal_bias="0.45" app:layout_constraintVertical_bias="0.019" app:layout_constraintStart_toEndOf="@+id/iv_place_image" app:layout_constraintBottom_toTopOf="@+id/btn_save" android:textStyle="bold"/>

    <Button android:layout_height="wrap_content" android:layout_width="match_parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:background="@drawable/shape_button_rounded" android:id="@+id/btn_save" app:layout_constraintTop_toBottomOf="@+id/iv_place_image" android:textSize="@dimen/btn_text_size" android:textColor="@color/white_color" android:layout_marginTop="@dimen/add_screen_btn_save_marginTop" android:text="@string/btn_text_save" android:gravity="center" android:paddingBottom="@dimen/add_screen_btn_save_paddingTopBottom" android:paddingTop="@dimen/add_screen_btn_save_paddingTopBottom" android:layout_gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>